fix: emoji interactions and news card alignment

--- a/src/app/shared/components/news-card/news-card.component.css
+++ b/src/app/shared/components/news-card/news-card.component.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     overflow: hidden;
     padding:0;
-    margin: 5px 0px;
+    margin: 5px 0;
     display: flex;
     flex-direction: column;
 }
@@ -20,9 +20,10 @@
     text-overflow: ellipsis;
     width:100%;
     height: 6rem;
+    position: relative;
 }
+
 .clamp {
-    overflow:hidden;
     line-height: 2rem;
     max-height: 8rem;
     -webkit-box-orient: vertical;
@@ -32,4 +33,9 @@
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
     width:90%;
+}
+
+.align-end {
+  position: absolute;
+  bottom: 0;
 }
